--- a/requirements.txt
+++ b/requirements.txt
@@ -5,7 +5,13 @@ Jinja2==2.10.1
 MarkupSafe==1.1.1
 Werkzeug==0.15.5
 numpy==1.22.2
+certifi==2019.11.28
+Click==7.0
 scipy>=0.15.1
+tpot>=0.11.0
+seaborn==0.9.0
+cloudpickle>=0.6.0
+joblib==0.14.0
 scikit-learn>=0.22.2
 matplotlib>=1.4.3
 pandas>=0.19
